# local-ai

./: README.md  pyproject.toml
src/local_ai/: main.py
src/local_ai/ml/: cpp.py  models.py  pytorch.py
